# UdemyCMake

./: .gitignore  README.md
1_HelloWorld/: CMakeLists.txt  main.cpp
2_BasicProject/: CMakeLists.txt  greet_lib.cpp
3_IntermediateProject/: CMakeLists.txt
3_IntermediateProject/app/: CMakeLists.txt
3_IntermediateProject/lib/: CMakeLists.txt
4_VariableOptions/: CMakeLists.txt  Makefile
4_VariableOptions/app/: CMakeLists.txt  main.cpp
4_VariableOptions/lib/: CMakeLists.txt
4_VariableOptions/lib/include/: greet_lib.h
